@@ -64,7 +64,7 @@ class ProductServiceTest {
                 .name("Name")
                 .description("Description")
                 .price(new BigDecimal("100.00"))
-                .imageURL("http://localhost/img/1.jpg")
+                .imageUrl("http://localhost/img/1.jpg")
                 .createdAt(Timestamp.valueOf(LocalDateTime.now()))
                 .categoryResponseDto(new CategoryResponseDto(1L,"Category"))
                 .build();
@@ -103,7 +103,7 @@ class ProductServiceTest {
                 .name("Name")
                 .description("Description")
                 .price(new BigDecimal("100.00"))
-                .imageURL("http://localhost/img/1.jpg")
+                .imageUrl("http://localhost/img/1.jpg")
                 .category("Category")
                 .build();
 
@@ -111,7 +111,7 @@ class ProductServiceTest {
                 .name("Name")
                 .description("Description")
                 .price(new BigDecimal("100.00"))
-                .imageURL("http://localhost/img/1.jpg")
+                .imageUrl("http://localhost/img/1.jpg")
                 .category("WrongCategory")
                 .build();
     }
@@ -224,17 +224,20 @@ class ProductServiceTest {
         verify(mappersMock, times(1)).convertToProductResponseDto(any(Product.class));
     }
 
+
     @Test
     void getTop10Products() {
         class MockProductCount implements ProductCountInterface {
             private Long productId;
             private String name;
+            private String status;
             private Integer count;
             private BigDecimal sum;
 
-            public MockProductCount(Long productId, String name, Integer count, BigDecimal sum) {
+            public MockProductCount(Long productId, String name, String status, Integer count, BigDecimal sum) {
                 this.productId = productId;
                 this.name = name;
+                this.status = status;
                 this.count = count;
                 this.sum = sum;
             }
@@ -250,6 +253,11 @@ class ProductServiceTest {
             }
 
             @Override
+            public String getStatus() {
+                return status;
+            }
+
+            @Override
             public Integer getCount() {
                 return count;
             }
@@ -259,9 +267,9 @@ class ProductServiceTest {
                 return sum;
             }
         }
-        ProductCountDto productCountDto =ProductCountDto.builder().productId(1L).name("Test name").count(2).sum(BigDecimal.valueOf(1.0)).build();
+        ProductCountDto productCountDto =ProductCountDto.builder().productId(1L).name("Test name").status("PAID").count(2).sum(BigDecimal.valueOf(1.0)).build();
         String sort = "Price";
-        ProductCountInterface productCountMock = new MockProductCount(1L, "Test name", 2, BigDecimal.valueOf(1.0));
+        ProductCountInterface productCountMock = new MockProductCount(1L, "Test name", "PAID",2, BigDecimal.valueOf(1.0));
 
         List<ProductCountInterface> productCountInterfaceList = List.of(productCountMock);
 
@@ -272,11 +280,12 @@ class ProductServiceTest {
 
         verify(productRepositoryMock, times(1)).findTop10Products(sort);
         assertEquals(1, actualProductCountDto.size());
-        assertNotNull(actualProductCountDto.get(0));
-        assertEquals(productCountDto.getProductId(), actualProductCountDto.get(0).getProductId());
-        assertEquals(productCountDto.getName(), actualProductCountDto.get(0).getName());
-        assertEquals(productCountDto.getCount(), actualProductCountDto.get(0).getCount());
-        assertEquals(productCountDto.getSum(), actualProductCountDto.get(0).getSum());
+        assertNotNull(actualProductCountDto.getFirst());
+        assertEquals(productCountDto.getProductId(), actualProductCountDto.getFirst().getProductId());
+        assertEquals(productCountDto.getName(), actualProductCountDto.getFirst().getName());
+        assertEquals(productCountDto.getStatus(), actualProductCountDto.getFirst().getStatus());
+        assertEquals(productCountDto.getCount(), actualProductCountDto.getFirst().getCount());
+        assertEquals(productCountDto.getSum(), actualProductCountDto.getFirst().getSum());
     }
 
     @Test
@@ -289,9 +298,9 @@ class ProductServiceTest {
         Sort sortObject = orderBy("name", true);
         when(productRepositoryMock.findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject)).thenReturn(List.of(product));
         List<Product> actualProductResponseDto = productRepositoryMock.findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject);
-        assertTrue(actualProductResponseDto.size() > 0);
+        assertFalse(actualProductResponseDto.isEmpty());
         verify(productRepositoryMock, times(1)).findProductsByFilter(hasCategory,categoryId,minPrice,maxPrice,hasDiscount,sortObject);
-        assertEquals(product.getProductId(),actualProductResponseDto.get(0).getProductId());
+        assertEquals(product.getProductId(),actualProductResponseDto.getFirst().getProductId());
     }
 
     @Test
@@ -300,13 +309,13 @@ class ProductServiceTest {
             private Long productId;
             private String name;
             private Integer count;
-            private Timestamp createdAt;
+            private String status;
 
-            public MockProductPending(Long productId, String name, Integer count, Timestamp createdAt) {
+            public MockProductPending(Long productId, String name, Integer count, String status) {
                 this.productId = productId;
                 this.name = name;
                 this.count = count;
-                this.createdAt = createdAt;
+                this.status = status;
             }
 
             @Override
@@ -325,25 +334,24 @@ class ProductServiceTest {
             }
 
             @Override
-            public Timestamp getCreatedAt() {
-                return null;
+            public String getStatus() {
+                return status;
             }
         }
-        ProductPendingDto productPendingDto = ProductPendingDto.builder().productId(1L).name("Test name").count(2).createdAt(Timestamp.valueOf("2024-12-12 00:00:00")).build();
+        ProductPendingDto productPendingDto = ProductPendingDto.builder().productId(1L).name("Test name").count(2).status("PENDING").build();
         Integer day = 5;
-        ProductPendingInterface productPendingMock = new MockProductPending(1L,"Test name",2,Timestamp.valueOf("2024-12-12 00:00:00"));
+        ProductPendingInterface productPendingMock = new MockProductPending(1L,"Test name",2,"PENDING");
         List<ProductPendingInterface> productPendingInterfaceList = List.of(productPendingMock);
         when(productRepositoryMock.findProductPending(anyInt())).thenReturn(productPendingInterfaceList);
         when(mappersMock.convertToProductPendingDto(any(ProductPendingInterface.class))).thenReturn(productPendingDto);
         List <ProductPendingDto> actualProductPendingDto = productServiceMock.findProductPending(day);
         verify(productRepositoryMock, times(1)).findProductPending(day);
         assertEquals(1, actualProductPendingDto.size());
-        assertNotNull(actualProductPendingDto.get(0));
-        assertEquals(productPendingDto.getProductId(), actualProductPendingDto.get(0).getProductId());
-        assertEquals(productPendingDto.getName(), actualProductPendingDto.get(0).getName());
-        assertEquals(productPendingDto.getCount(), actualProductPendingDto.get(0).getCount());
-        assertEquals(productPendingDto.getCreatedAt(), actualProductPendingDto.get(0).getCreatedAt());
-
+        assertNotNull(actualProductPendingDto.getFirst());
+        assertEquals(productPendingDto.getProductId(), actualProductPendingDto.getFirst().getProductId());
+        assertEquals(productPendingDto.getName(), actualProductPendingDto.getFirst().getName());
+        assertEquals(productPendingDto.getCount(), actualProductPendingDto.getFirst().getCount());
+        assertEquals(productPendingDto.getStatus(), actualProductPendingDto.getFirst().getStatus());
     }
 
     @Test
@@ -370,15 +378,15 @@ class ProductServiceTest {
         Integer interval = 5;
         ProductProfitInterface productProfitInterface = new MockProductProfit("WEEK",BigDecimal.valueOf(22.0));
         List<ProductProfitInterface> productProfitInterfaceList = List.of(productProfitInterface);
-        when(productRepositoryMock.findProffitByPeriod(anyString(),anyInt())).thenReturn(productProfitInterfaceList);
+        when(productRepositoryMock.findProfitByPeriod(anyString(),anyInt())).thenReturn(productProfitInterfaceList);
         when(mappersMock.convertToProductProfitDto(any(ProductProfitInterface.class))).thenReturn(productProfitDto);
 
         List <ProductProfitDto> actualProductProfitDto = productServiceMock.findProductProfit(period,interval);
-        verify(productRepositoryMock, times(1)).findProffitByPeriod(period,interval);
+        verify(productRepositoryMock, times(1)).findProfitByPeriod(period,interval);
         assertEquals(1, actualProductProfitDto.size());
-        assertNotNull(actualProductProfitDto.get(0));
-        assertEquals(productProfitDto.getPeriod(), actualProductProfitDto.get(0).getPeriod());
-        assertEquals(productProfitDto.getSum(), actualProductProfitDto.get(0).getSum());
+        assertNotNull(actualProductProfitDto.getFirst());
+        assertEquals(productProfitDto.getPeriod(), actualProductProfitDto.getFirst().getPeriod());
+        assertEquals(productProfitDto.getSum(), actualProductProfitDto.getFirst().getSum());
 
     }
     private Sort orderBy(String sort, Boolean ascending) {
